ipc/ipdl/test/ipdl/error/Nullable.ipdl
//error: `nullable' qualifier for type `int' makes no sense

protocol Nullable {
child:
    async Msg(nullable int i);
};
